# storage/api-docs/api-docs.json
@@ -816,7 +816,7 @@
         "/api/v1/user/addresses": {
             "post": {
                 "tags": [
-                    "User"
+                    "Share"
                 ],
                 "summary": "postAddresses",
                 "description": "postAddresses",
@@ -899,7 +899,7 @@
             },
             "put": {
                 "tags": [
-                    "User"
+                    "Share"
                 ],
                 "summary": "postAddresses",
                 "description": "postAddresses",
@@ -1452,6 +1452,38 @@
                 "required": [
                     "email"
                 ],
+                "properties": {
+                    "name": {
+                        "title": "User First Name",
+                        "description": "First name of the user",
+                        "type": "string",
+                        "example": "Nnamdi"
+                    },
+                    "address": {
+                        "title": "User Address",
+                        "description": "Address of the user",
+                        "type": "string",
+                        "example": "No 4 Gang street"
+                    },
+                    "state": {
+                        "title": "User state",
+                        "description": "state of the user",
+                        "type": "string",
+                        "example": "No 4 Gang street"
+                    },
+                    "postal_code": {
+                        "title": "User postal_code",
+                        "description": "postal_code of the user",
+                        "type": "string",
+                        "example": "No 4 Gang street"
+                    },
+                    "primary_address": {
+                        "title": "User primary address",
+                        "description": "primary address of the user",
+                        "type": "boolean",
+                        "example": "false"
+                    }
+                },
                 "type": "object"
             },
             "AddressUpdateFormRequest": {
@@ -1460,6 +1492,38 @@
                 "required": [
                     "email"
                 ],
+                "properties": {
+                    "name": {
+                        "title": "User First Name",
+                        "description": "First name of the user",
+                        "type": "string",
+                        "example": "Nnamdi"
+                    },
+                    "address": {
+                        "title": "User Address",
+                        "description": "Address of the user",
+                        "type": "string",
+                        "example": "No 4 Gang street"
+                    },
+                    "state": {
+                        "title": "User state",
+                        "description": "state of the user",
+                        "type": "string",
+                        "example": "No 4 Gang street"
+                    },
+                    "postal_code": {
+                        "title": "User postal_code",
+                        "description": "postal_code of the user",
+                        "type": "string",
+                        "example": "No 4 Gang street"
+                    },
+                    "primary_address": {
+                        "title": "User primary address",
+                        "description": "primary address of the user",
+                        "type": "boolean",
+                        "example": "false"
+                    }
+                },
                 "type": "object"
             },
             "RoleCreateFormRequest": {
@@ -1627,47 +1691,17 @@
                     "email"
                 ],
                 "properties": {
-                    "xpart_request_id": {
-                        "title": "Xpart Request ID",
-                        "description": "Xpart Request ID",
+                    "part_id": {
+                        "title": "Xpart Part ID",
+                        "description": "Xpart Part ID",
                         "type": "integer",
                         "example": "1"
                     },
-                    "part_grade_id": {
-                        "title": "Part Grade ID",
-                        "description": "Part Grade ID",
+                    "category_three_part_id": {
+                        "title": "Category Three Part ID",
+                        "description": "Category Three Part ID",
                         "type": "integer",
                         "example": "1"
-                    },
-                    "part_category_id": {
-                        "title": "Part Category ID",
-                        "description": "Part Category ID",
-                        "type": "integer",
-                        "example": "1"
-                    },
-                    "part_subcategory_id": {
-                        "title": "Part SubcPart Category ID",
-                        "description": "Part SubcPart Category ID",
-                        "type": "integer",
-                        "example": "1"
-                    },
-                    "part_condition_id": {
-                        "title": "Part Condition ID",
-                        "description": "Part Condition ID",
-                        "type": "integer",
-                        "example": "1"
-                    },
-                    "brand": {
-                        "title": "Brand of the part",
-                        "description": "Brand of the parts",
-                        "type": "string",
-                        "example": "motorola"
-                    },
-                    "quantity": {
-                        "title": "Quantity",
-                        "description": "Quantity",
-                        "type": "integer",
-                        "example": "234"
                     },
                     "part_number": {
                         "title": "Part Number",
@@ -1675,23 +1709,29 @@
                         "type": "string",
                         "example": "NCEI3043NEWIWW"
                     },
-                    "part_warranty": {
-                        "title": "Part Warranty",
-                        "description": "Part Warranty",
-                        "type": "integer",
-                        "example": "3"
-                    },
-                    "price": {
-                        "title": "Part Price",
-                        "description": "Part Price",
-                        "type": "integer",
-                        "example": "3"
-                    },
-                    "description": {
-                        "title": "Description",
-                        "description": "Description",
+                    "vin": {
+                        "title": "Car VIN",
+                        "description": "Car VIN",
                         "type": "string",
-                        "example": "This is ......................."
+                        "example": "CNCIEI30330DN3993"
+                    },
+                    "make": {
+                        "title": "Car Make",
+                        "description": "Car Make",
+                        "type": "integer",
+                        "example": "3"
+                    },
+                    "model": {
+                        "title": "Car Model",
+                        "description": "Car Model",
+                        "type": "integer",
+                        "example": "3"
+                    },
+                    "year": {
+                        "title": "Car Year",
+                        "description": "Car Year",
+                        "type": "integer",
+                        "example": "3"
                     }
                 },
                 "type": "object"
